<resources>
    <string name="app_name">AppExpenseManager</string>
    <string name="statistics_string">Статиститка</string>
    <string name="expenses_string">Затраты</string>
    <string name="add_expenses">Добавьте расходы</string>
    <string name="amount_hilt">Сумма</string>
    <string name="description_hilt">Описание</string>
    <string name="date_string">Дата</string>
    <string name="category_string">Категория</string>
    <string name="delete_transaction">Запись удалена</string>
    <string name="save_transaction">Запись сохранена</string>

    <string name="supermarkets">Супермаркеты</string>
    <string name="travel">Путешествия</string>
    <string name="clothes">Одежда</string>
    <string name="movies">Фильмы</string>
    <string name="health">Здоровье</string>
    <string name="restaurant">Рестораны и кафе</string>
    <string name="other">Другое</string>
    <string name="choose_category_string">Выберете категорию</string>
    <string name="select_category_string">Пожалуйста выберете категорию</string>
    <string name="add_button_string">Добавить</string>
    <string name="back_button_string">Назад</string>
    <string name="add_expenses_string">Добавьте расходы</string>
    <string name="update_string">Изменить</string>
    <string name="update_transaction_expenses">Изменить расходы</string>
    <string name="expebses_string">Расходы</string>
    <string name="chech_all_fields">Все поля должны быть заполнены</string>
    <string name="add_amount_string">Пожалуйста введите сумму</string>
    <string name="add_catergory_string">Пожалуйста выберите категорию</string>
    <string name="add_description_string">Пожалуйста введите описание</string>

    <string-array name="filter_options">
        <item>@string/supermarkets</item>
        <item>@string/travel</item>
        <item>@string/clothes</item>
        <item>@string/movies</item>
        <item>@string/health</item>
        <item>@string/restaurant</item>
        <item>@string/other</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>