<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.addTransaction.AddTransactionFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/amount_text_input"
        style="@style/TextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/text_input_margin"
        android:layout_marginTop="@dimen/text_input_top_margin"
        android:layout_marginEnd="@dimen/text_input_margin"
        android:animateLayoutChanges="true"
        android:focusableInTouchMode="true"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/amount_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/amount_hilt"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/description_text_input"
        style="@style/TextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/text_input_margin"
        android:layout_marginEnd="@dimen/text_input_margin"
        android:animateLayoutChanges="true"
        android:focusableInTouchMode="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amount_text_input">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/description_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description_hilt"
            android:inputType="textPersonName|textCapSentences" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/text_input_margin"
        android:layout_marginTop="@dimen/text_input_margin"
        android:text="@string/date_string"
        android:textColor="@color/categoryTextColor"
        android:textSize="@dimen/normal_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description_text_input" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/date_button"
        style="@style/dateButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/text_input_margin"
        android:layout_marginTop="@dimen/normal_margin"
        android:layout_marginEnd="@dimen/text_input_margin"
        android:textAppearance="@style/dateButtonStyle"
        android:textSize="@dimen/normal_text_size"
        app:layout_constraintEnd_toStartOf="@+id/category_input_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date"
        app:strokeColor="@color/dateStrokeColor"
        app:strokeWidth="2dp"
        tools:text="12/22/22" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_input_margin"
        android:text="@string/category_string"
        android:textColor="@color/categoryTextColor"
        android:textSize="@dimen/normal_text_size"
        app:layout_constraintEnd_toEndOf="@+id/description_text_input"
        app:layout_constraintStart_toEndOf="@+id/date"
        app:layout_constraintTop_toBottomOf="@+id/description_text_input" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/category_input_layout"
        style="@style/spinnerStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normal_margin"
        android:animateLayoutChanges="true"
        android:enabled="true"
        android:focusableInTouchMode="true"
        app:layout_constraintEnd_toEndOf="@+id/description_text_input"
        app:layout_constraintStart_toStartOf="@+id/category"
        app:layout_constraintTop_toBottomOf="@+id/category">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/category_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_button"
        style="@style/mainButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_marginEnd="@dimen/normal_margin"
        android:layout_marginBottom="@dimen/normal_margin"
        android:text="@string/add_button_string"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/back_button"
        app:strokeColor="@color/buttonStrokeColor" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/back_button"
        style="@style/mainButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/normal_margin"
        android:layout_marginEnd="@dimen/small_margin"
        android:layout_marginBottom="@dimen/normal_margin"
        android:text="@string/back_button_string"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/add_button"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="@color/buttonStrokeColor" />

</androidx.constraintlayout.widget.ConstraintLayout>